# sqlfluff-complexity

./: .bandit  .gitignore  .pylintrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  noxfile.py  pyproject.toml  requirements.setup.txt  ruff.toml
.claude/: README.md  settings.json
.claude/agents/: verifier.md
.claude/commands/: mend-adr.md
.claude/hooks/: validate-commit.sh
.claude/skills/build-and-fix/: SKILL.md
.claude/skills/check-directory-structure/: SKILL.md
.claude/skills/codeql-fix/: SKILL.md
.claude/skills/codeql-fix/assets/: code-scanning-config.template.yml
.claude/skills/codeql-fix/references/: code-scanning-config.md
.claude/skills/codeql-fix/scripts/: render-code-scanning-config.sh
.claude/skills/complexity-check/: SKILL.md
.claude/skills/deep-problem-solving/: README.md  SKILL.md
.claude/skills/deep-problem-solving/references/: full-report-template.md
.claude/skills/initialize-project/: SKILL.md
.claude/skills/lint-and-fix/: SKILL.md
.claude/skills/manage-adr/: SKILL.md
.claude/skills/manage-adr/references/: adr-concepts.md  adr-granularity.md  mermaid-diagrams.md
.claude/skills/manage-adr/scripts/: create-adr.sh
.claude/skills/postmortem/: SKILL.md
.claude/skills/postmortem/references/: postmortem-report-template.md  solution-scorecard.md
.claude/skills/problem-solving/: README.md  SKILL.md
.claude/skills/python-upgrade/: SKILL.md
.claude/skills/security-scan/: SKILL.md
.claude/skills/setup-dev-env/: SKILL.md
.claude/skills/test-and-fix/: SKILL.md
.claude/skills/test-coverage/: SKILL.md
.codex/: config.toml  hooks.json
.codex/agents/: verifier.toml
.codex/hooks/: block-dangerous.sh  format-python.sh
.cursor/: sandbox.json
.github/: dependabot.yml
.github/workflows/: codeql.yml  publish.yml  test-dbt-templater.yml  test-dialect-fixtures.yml  test-publish.yml  test.yml  trunk_check.yml  trunk_upgrade.yml
.todo_list/: enhance-sqlfluff-complexity-c108-c109.md
.trunk/: trunk.yaml
dev/: bootstrap_exp_fixtures.py  build.sh  clean.sh  codeql.sh  coverage_bootstrap.py  coverage_cleanup.py  coverage_importlib_meta.json  coverage_importlib_meta_access.py  coverage_importlib_names.py  emit_fixture_metrics.py  fixture_parse_guard.py  publish.sh  setup.sh  test_python.sh
docs/: adoption.md  baseline.md  configuration.md  dbt.md  dialects.md  index.md  migration-internal.md  product_design.md  quickstart.md  reporting.md  rules.md  tests-layout.md
docs/adr/: 0001-record-architecture-decisions.md  0002-use-sqlfluff-plugin-plus-companion-report-cli.md  0003-derive-complexity-metrics-from-sqlfluff-segment-trees.md  0004-defer-dbt-manifest-metrics-for-v1.md  0005-validate-sql-dialect-support-with-fixture-matrix.md  0006-use-nox-for-multi-python-test-orchestration.md  template.md
docs/assets/: medium.md
docs/superpowers/plans/: 2026-05-01-p0-sqlfluff-complexity-trust.md
skills/configure-cpx/: SKILL.md
src/sqlfluff_complexity/: __init__.py  __main__.py  baseline.py  check.py  cli.py  paths.py  plugin_default_config.cfg  report.py
src/sqlfluff_complexity/core/: __init__.py  analysis.py  explainability.py  findings.py  metrics.py  policy.py  remediation.py  scoring.py  segment_tree.py  structural_metrics.py  violation_messages.py
src/sqlfluff_complexity/core/analysis/: __init__.py  contributors.py  explainability.py
src/sqlfluff_complexity/core/config/: __init__.py  cpx_config.py  policy.py  presets.py  scoring.py
src/sqlfluff_complexity/core/messages/: __init__.py  findings.py  remediation.py  violation_messages.py
src/sqlfluff_complexity/core/model/: __init__.py  metrics.py
src/sqlfluff_complexity/core/scan/: __init__.py  segment_tree.py
src/sqlfluff_complexity/reporting/: __init__.py  json.py  sarif.py
src/sqlfluff_complexity/rules/: __init__.py  base.py  c101_too_many_ctes.py  c102_too_many_joins.py  c103_subquery_depth.py  c104_too_many_case.py  c105_boolean_complexity.py  c106_too_many_windows.py  c107_cte_dependency_depth.py  c108_nested_case_depth.py  c109_set_operations.py  c110_derived_tables.py  c201_aggregate_score.py
src/sqlfluff_complexity/tests/: __init__.py  fixture_loader.py  sqlfluff_helpers.py  test_baseline.py  test_c107_cte_dependency_depth.py  test_c201_show_contributors.py  test_check.py  test_cli.py  test_core_analysis.py  test_core_explainability.py  test_coverage_cleanup_contract.py  test_cpx_config.py  test_paths.py  test_policy.py  test_report_c201_contributors.py  test_report_console.py  test_report_findings_golden.py  test_report_per_rule_contributors.py  test_report_sarif_anchor.py  test_rules.py  test_sqlfluff_integration.py  test_structural_metrics.py  test_version.py
src/your_package/: __init__.py
src/your_package/tests/: __init__.py  test_dummy.py
(+107 files in other folders)
