[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
  ".git",
  ".gitignore",
  ".venv",
  ".mypy_cache",
  ".ruff_cache",
  ".pyright",
  ".pytest_cache",
  ".pylintrc",
  ".nox",
  ".github",
  ".trunk",
  ".cursor",
  ".cursorignore",
  ".vscode",
  ".claude",
  ".agents",
  ".codex",
  ".gemini",
  ".codeql_db",
  "AGENTS.md",
  "CLAUDE.md",
  "GEMINI.md",
  "dev",
  "src/sqlfluff_complexity/tests",
  "dist",
  ".python-version",
  "Makefile",
  "requirements.setup.txt",
  "noxfile.py",
  "ruff.toml",
  "CONTRIBUTING.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sqlfluff_complexity"]

[tool.hatch.build.targets.wheel.force-include]
"src/sqlfluff_complexity/plugin_default_config.cfg" = "sqlfluff_complexity/plugin_default_config.cfg"

[project]
name = "sqlfluff-complexity"
version = "0.1.0"
authors = [{ name = "yu-iskw" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10.0"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
description = "SQLFluff plugin for SQL and dbt model complexity rules"
dependencies = ["sqlfluff>=3.0.0,<4.0.0"]

[project.scripts]
sqlfluff-complexity = "sqlfluff_complexity.cli:main"

[project.entry-points.sqlfluff]
sqlfluff_complexity = "sqlfluff_complexity"

[tool.pytest.ini_options]
testpaths = ["src/sqlfluff_complexity/tests"]
markers = [
  "dialect_extra: optional dialect-specific fixture tests (not default PR suite).",
  "dbt_templater: optional SQLFluff dbt templater integration tests.",
]

[dependency-groups]
dbt = ["dbt-duckdb>=1.10.1", "sqlfluff-templater-dbt>=3.5.0"]
dev = [
  "xenon>=0.9.3",
  "nox>=2026.4.10",
  "pytest>=8.3.5",
  "bandit>=1.8.3",
  "ruff>=0.15.0",
  "pyright>=1.1.0",
  "pylint>=3.3.5",
  "vulture>=2.16",
  "pytest-xdist>=3.8.0",
]

[tool.pyright]
include = ["src"]
extraPaths = ["src"]
pythonVersion = "3.10"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
reportMissingImports = true
reportMissingTypeStubs = "warning"
# SQLFluff BaseRule sets dynamic kwargs on instances; ClassVar on config_keywords is required
# for correct RUF012 semantics on rule subclasses.
reportIncompatibleVariableOverride = false

[tool.vulture]
paths = ["src/sqlfluff_complexity"]
min_confidence = 80
